SVN $Id$
SVN $URL$
===============================================================================
Tag Creator: mlevy
Developers:  klindsay
Tag Date:    27 Feb 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140227a
Tag Summary: P_iron remin is not always computed correctly

Files Modified:
M       source/ecosys_mod.F90
===============================================================================
Tag Creator: mlevy
Developers:  klindsay
Tag Date:    27 Feb 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140227
Tag Summary: Ecosys diagnostics didn't initialize P_iron%sed_loss to zero and
             had incorrect units for pfeToSed variable.

Files Modified:
M       source/ecosys_mod.F90
===============================================================================
Tag Creator: mlevy
Developers:  santos
Tag Date:    20 Dec 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131220
Tag Summary: Another bugfix related to updated compilers

Files Modified:
M       source/cfc_mod.F90
M       source/cfc11_mod.F90
M       source/tavg.F90
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    5 Dec 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131205
Tag Summary: Fix a bug in the creation of pop2.input_data_list -- there is one
             binary file in the inputdata repository that requires a .hdr file
             and now the hdr file is pulled from the repository (when needed)
             by the check_input_data_script

Files Modified:
M       bld/build-namelist
===============================================================================
Tag Creator: mlevy
Developers:  klindsay
Tag Date:    2 Dec 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131202
Tag Summary: Update default values for ecosys

Files Modified:
M       source/ecosys_parms.F90
M       bld/namelist_files/namelist_defaults_pop2.xml
===============================================================================