@@ -5,6 +5,16 @@ Tag Creator: mlevy
 Developers:  klindsay
 Tag Date:    27 Feb 2014
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140227a
+Tag Summary: overflows had a text field that was outputting ******* instead of
+             proper diagnostic values
+
+Files Modified:
+M       source/overflows.F90
+===============================================================================
+Tag Creator: mlevy
+Developers:  klindsay
+Tag Date:    27 Feb 2014
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140227a
 Tag Summary: P_iron remin is not always computed correctly
 
 Files Modified:
